--- a/index.html
+++ b/index.html
@@ -1,110 +1,116 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>SecureLife Insurance</title>
+  <title>Insurance SACCO</title>
+  <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet"/>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet"/>
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet"/>
   <link rel="stylesheet" href="sacco.css"/>
-
 </head>
 <body>
 
-  <header>
-    <h1>SecureLife Insurance</h1>
-    <p>Your safety, our priority</p>
-  </header>
+<header>
+  <h1>SecureLife Insurance</h1>
+  <p>Your safety, our priority</p>
+</header>
 
-  <nav>
-    <a href="#home">Home</a>
-    <a href="#about">About Us</a>
-    <a href="#services">Services</a>
-    <a href="#quote">Get a Quote</a>
-    <a href="#contact">Contact</a>
-  
-    <div class="hover-image hover-home"></div>
-    <div class="hover-image hover-about"></div>
-    <div class="hover-image hover-services"></div>
-  </nav>
 
-  <section class="hero" id="home">
-    <h1>Protect What Matters Most</h1>
-    <p>Get affordable life, health, and vehicle insurance today.</p>
+
+
+<!-- Hero Section -->
+<section class="hero" data-aos="fade-up">
+  <div class="hero-content">
+    <h1>Welcome to SecureLife Insurance</h1>
+    <p>Protecting what matters most. Today, tomorrow, always.</p>
     <a href="#quote"><button>Get a Quote</button></a>
-  </section>
+  </div>
+</section>
 
-  <section class="section" id="about">
-    <h2>About Us</h2>
-    <p>SecureLife Insurance has been helping families stay protected for over 25 years. We offer personalized plans tailored to your needs.</p>
-    <img src="https://images.unsplash.com/photo-1573164713988-8665fc963095?auto=format&fit=crop&w=1050&q=80" alt="About SecureLife" class="about-img">
-  </section>
-
-  <section class="section" id="services">
-    <h2>Our Services</h2>
-    <div class="services-grid">
-      <div class="service-card">
-        <img src="https://cdn-icons-png.flaticon.com/512/3105/3105799.png" alt="Life Insurance">
-        <p>Life Insurance</p>
-      </div>
-      <div class="service-card">
-        <img src="https://cdn-icons-png.flaticon.com/512/3123/3123450.png" alt="Health Insurance">
-        <p>Health Insurance</p>
-      </div>
-      <div class="service-card">
-        <img src="https://cdn-icons-png.flaticon.com/512/1046/1046857.png" alt="Car Insurance">
-        <p>Car Insurance</p>
-      </div>
-      <div class="service-card">
-        <img src="https://cdn-icons-png.flaticon.com/512/3062/3062634.png" alt="Home Insurance">
-        <p>Home Insurance</p>
-      </div>
+<!-- Services Section -->
+<section class="services" id="services" data-aos="fade-up">
+  <h2>Our Services</h2>
+  <div class="services-grid">
+    <div class="service-card" data-aos="zoom-in">
+      <img src="https://cdn-icons-png.flaticon.com/512/3105/3105799.png" alt="Life Insurance">
+      <h3>Life Insurance</h3>
     </div>
-  </section>
-
-  <section class="section" id="quote">
-    <h2>Get Your Insurance Quote</h2>
-    <form id="quoteForm">
-      <label>Full Name:</label>
-      <input type="text" required>
-
-      <label>Age:</label>
-      <input type="number" id="age" required>
-
-      <label>Insurance Type:</label>
-      <select id="type">
-        <option value="life">Life</option>
-        <option value="health">Health</option>
-        <option value="car">Car</option>
-      </select>
-
-      <label>Coverage Amount ($):</label>
-      <input type="number" id="coverage" required>
-
-      <button type="submit">Calculate</button>
-    </form>
-
-    <div class="result" id="result"></div>
-  </section>
-
-  <section class="section" id="contact">
-    <h2>Contact Us for more information</h2>
-    <form onsubmit="event.preventDefault(); alert('event')">
-      <input type="text" placeholder="Your Name" required />
-      <input type="email" placeholder="Your Email" required />
-      <input type="text" placeholder="Enter your full name" required>
-<input type="number" id="age" placeholder="Your age" required>
-<input type="number" id="coverage" placeholder="Coverage amount in $" required>
-
-      <textarea placeholder="Your Message" rows="5" required></textarea>
-      <button type="submit">Send Message</button>
-    </form>
-  </section>
-
-  <footer>
-    <p>&copy; 2025 SecureLife Insurance. All rights reserved.</p>
-  </footer>
-  <script src="script.js"></script>
+    <div class="service-card" data-aos="zoom-in" data-aos-delay="100">
+      <img src="https://cdn-icons-png.flaticon.com/512/3123/3123450.png" alt="Health Insurance">
+      <h3>Health Insurance</h3>
+    </div>
+    <div class="service-card" data-aos="zoom-in" data-aos-delay="200">
+      <img src="https://cdn-icons-png.flaticon.com/512/1046/1046857.png" alt="Car Insurance">
+      <h3>Car Insurance</h3>
+    </div>
+    <div class="service-card" data-aos="zoom-in" data-aos-delay="300">
+      <img src="https://cdn-icons-png.flaticon.com/512/3062/3062634.png" alt="Home Insurance">
+      <h3>Home Insurance</h3>
+    </div>
+  </div>
+</section>
 
 
+<!-- About Section -->
+<section class="section" id="about" data-aos="fade-up">
+  <h2>About Us</h2>
+  <p>SecureLife Insurance has been helping families stay protected for over 25 years. We offer personalized plans tailored to your needs.</p>
+  <img src="https://images.unsplash.com/photo-1573164713988-8665fc963095?auto=format&fit=crop&w=1050&q=80" alt="About SecureLife" class="about-img">
+</section>
+
+
+<!-- Quote Form Section -->
+<section id="quote" data-aos="fade-up">
+  <h2>Get a Quote</h2>
+  <form id="quoteForm">
+    <input type="number" id="age" placeholder="Enter your age" required />
+    <input type="number" id="coverage" placeholder="Enter coverage amount" required />
+    <select id="type">
+      <option value="health">Health</option>
+      <option value="car">Car</option>
+    </select>
+    <button type="submit">Get Quote</button>
+  </form>
+  <p id="result"></p>
+</section>
+
+<!-- Newsletter Subscription -->
+<section id="newsletter" data-aos="fade-up">
+  <h2>Subscribe to Our Newsletter</h2>
+  <form id="newsletterForm">
+    <input type="email" id="newsletterEmail" placeholder="Enter your email" required />
+    <button type="submit">Subscribe</button>
+  </form>
+  <p id="newsletterResult"></p>
+</section>
+
+<!-- Contact Form -->
+<section id="contact" data-aos="fade-up">
+  <h2>Contact Us</h2>
+  <form id="contactForm">
+    <input type="text" placeholder="Your Name" required />
+    <input type="email" placeholder="Your Email" required />
+    <textarea placeholder="Your Message" required></textarea>
+    <button type="submit">Send Message</button>
+  </form>
+</section>
+
+<!-- Floating Action Button -->
+<button class="fab" onclick="document.getElementById('quote').scrollIntoView()">
+  <i class="fas fa-phone-alt"></i>
+</button>
+<button id="toggle-button">Toggle Dark Mode</button>
+<!-- Footer -->
+<footer>
+  <p>&copy; 2025 SecureLife Insurance. All rights reserved.</p>
+</footer>
+
+<!-- JS Scripts -->
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script>
+  AOS.init();
+</script>
+<script src="script.js"></script>
 </body>
 </html>
