--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
     <a href="#quote"><button>Get a Quote</button></a>
   </div>
 </section>
+<a href="health.html" > health </a>
+
 
 <!-- Services Section -->
 <section class="services" id="services" data-aos="fade-up">
